# lavax

./: README.md  configure.ac
demo/: INCAR  KPOINTS  POSCAR_init  POTCAR  W_BN.eam.fs  lavax.conf
src/: Makefile.am  Particle.java  Vec3.java  lavax.conf  lavax.java  predictor.in
