#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.61])
AC_INIT([lavax], [0.6], [danielk5@kth.se])
AM_INIT_AUTOMAKE([foreign])
dnl AC_CONFIG_SRCDIR([src])
dnl AC_CONFIG_HEADERS([config.h])

AC_SEARCH_LIBS([pthread_create], [pthread])

dnl AX_PROG_JAVA
dnl AX_PROG_JAVAC

AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
